Update for version alpha3

--- a/logstashbeat.yml
+++ b/logstashbeat.yml
@@ -11,7 +11,7 @@ logstashbeat:
   node:
     events: true
     jvm: true
-    process: false
+    process: true
 
 
 #================================ General =====================================
