--- a/.travis.yml
+++ b/.travis.yml
@@ -28,10 +28,10 @@ addons:
 
 before_install:
   # Redo the travis setup but with the elastic/libbeat path. This is needed so the package path is correct
-  - mkdir -p $HOME/gopath/src/github.com/elastic/beats/
-  - rsync -az ${TRAVIS_BUILD_DIR}/ $HOME/gopath/src/github.com/elastic/beats/
-  - export TRAVIS_BUILD_DIR=$HOME/gopath/src/github.com/elastic/beats/
-  - cd $HOME/gopath/src/github.com/elastic/beats/
+  - mkdir -p $HOME/gopath/src/github.com/radoondas/logstashbeat/
+  - rsync -az ${TRAVIS_BUILD_DIR}/ $HOME/gopath/src/github.com/radoondas/logstashbeat/
+  - export TRAVIS_BUILD_DIR=$HOME/gopath/src/github.com/radoondas/logstashbeat/
+  - cd $HOME/gopath/src/github.com/radoondas/logstashbeat/
 
 install:
   - true
