Support logstashbeat 5-aplha4

--- a/etc/beat.full.yml
+++ b/etc/beat.full.yml
@@ -9,7 +9,10 @@ logstashbeat:
   urls: ["http://127.0.0.1:9600"]
 
   node:
-    events: true
+    stats:
+      events: true
+      jvm: true
+      process: true
+      mem: true
+    pipeline: true
     jvm: true
-    process: true
-
